// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManualBackupStep1 matches snapshot 1`] = `
<View
  edges={
    {
      "bottom": "additive",
    }
  }
  style={
    [
      "bg-default flex-1",
    ]
  }
>
  <View
    style={
      [
        [
          "flex",
          undefined,
          undefined,
          false,
          undefined,
          undefined,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          undefined,
          undefined,
          "flex-1 px-4",
        ],
        undefined,
      ]
    }
  >
    <View
      style={
        [
          [
            "flex",
            undefined,
            undefined,
            false,
            undefined,
            undefined,
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            undefined,
            undefined,
            "flex-1 justify-between",
          ],
          undefined,
        ]
      }
    >
      <View
        style={
          [
            [
              "flex",
              undefined,
              undefined,
              false,
              undefined,
              undefined,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              undefined,
              undefined,
              "flex-1",
            ],
            undefined,
          ]
        }
      >
        <View
          style={
            [
              [
                "flex",
                undefined,
                undefined,
                false,
                undefined,
                undefined,
                false,
                false,
                false,
                false,
                false,
                false,
                false,
                false,
                false,
                false,
                false,
                false,
                false,
                false,
                false,
                undefined,
                undefined,
                "flex-1 flex-col gap-4",
              ],
              undefined,
            ]
          }
          testID="manual_backup_step_1-screen"
        >
          <Text
            accessibilityRole="text"
            style={
              [
                [
                  "text-display-md",
                  "font-default-bold",
                  "text-default",
                  undefined,
                ],
                undefined,
              ]
            }
          >
            Save your Secret Recovery Phrase
          </Text>
          <View
            style={
              [
                [
                  "flex",
                  undefined,
                  undefined,
                  false,
                  undefined,
                  "justify-start",
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  undefined,
                  undefined,
                  undefined,
                ],
                undefined,
              ]
            }
          >
            <Text
              accessibilityRole="text"
              style={
                [
                  [
                    "text-body-md",
                    "font-default-regular",
                    "text-alternative",
                    undefined,
                  ],
                  undefined,
                ]
              }
            >
              Your
               
              <Text
                accessibilityRole="text"
                onPress={[Function]}
                style={
                  [
                    [
                      "text-body-md",
                      "font-default-regular",
                      "text-primary-default",
                      undefined,
                    ],
                    undefined,
                  ]
                }
              >
                Secret Recovery Phrase
                 
              </Text>
              gives full wallet access.
               
              <Text
                accessibilityRole="text"
                style={
                  [
                    [
                      "text-body-md",
                      "font-default-medium",
                      "text-alternative",
                      undefined,
                    ],
                    undefined,
                  ]
                }
              >
                Write it down with the correct order and numbers. Keep it safe and never share it.
              </Text>
            </Text>
          </View>
          <View
            style={
              [
                [
                  "flex",
                  undefined,
                  undefined,
                  false,
                  undefined,
                  undefined,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  undefined,
                  undefined,
                  "bg-default rounded-lg flex-row border border-default min-h-[230px]",
                ],
                undefined,
              ]
            }
          >
            <View
              style={
                [
                  [
                    "flex",
                    undefined,
                    undefined,
                    false,
                    undefined,
                    undefined,
                    false,
                    false,
                    false,
                    false,
                    false,
                    false,
                    false,
                    false,
                    false,
                    false,
                    false,
                    false,
                    false,
                    false,
                    false,
                    undefined,
                    undefined,
                    "flex-1 rounded-lg",
                  ],
                  undefined,
                ]
              }
            >
              <TouchableOpacity
                onPress={[Function]}
                style={
                  [
                    "absolute top-0 left-0 bottom-0 right-0 h-full rounded-lg flex-1",
                  ]
                }
                testID="blur-button"
              >
                <View
                  accessibilityIgnoresInvertColors={true}
                  style={
                    [
                      "absolute top-0 left-0 bottom-0 right-0 h-full rounded-lg flex-1",
                      "opacity-50",
                    ]
                  }
                >
                  <Image
                    resizeMode="cover"
                    source={1}
                    style={
                      [
                        {
                          "bottom": 0,
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                        },
                        {
                          "height": undefined,
                          "width": undefined,
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
                <View
                  style={
                    [
                      [
                        "flex",
                        undefined,
                        undefined,
                        false,
                        undefined,
                        undefined,
                        false,
                        false,
                        false,
                        false,
                        false,
                        false,
                        false,
                        false,
                        false,
                        false,
                        false,
                        false,
                        false,
                        false,
                        false,
                        undefined,
                        undefined,
                        "items-center justify-center rounded-lg px-6 py-[45px] gap-y-4 h-full flex-1",
                      ],
                      undefined,
                    ]
                  }
                >
                  <SvgMock
                    fill="currentColor"
                    name="EyeSlash"
                    style={
                      [
                        [
                          "text-icon-default",
                          "w-8 h-8",
                          undefined,
                        ],
                        undefined,
                      ]
                    }
                  />
                  <Text
                    accessibilityRole="text"
                    style={
                      [
                        [
                          "text-body-md",
                          "font-default-medium",
                          "text-default",
                          undefined,
                        ],
                        undefined,
                      ]
                    }
                  >
                    Tap to reveal
                  </Text>
                  <Text
                    accessibilityRole="text"
                    style={
                      [
                        [
                          "text-body-sm",
                          "font-default-regular",
                          "text-default",
                          undefined,
                        ],
                        undefined,
                      ]
                    }
                  >
                    Make sure no one is watching your screen.
                  </Text>
                </View>
              </TouchableOpacity>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          [
            [
              "flex",
              undefined,
              undefined,
              false,
              undefined,
              undefined,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              undefined,
              undefined,
              "px-0 gap-4 flex justify-center items-center mb-0",
            ],
            undefined,
          ]
        }
      >
        <View
          accessibilityLabel="Continue"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              [
                "flex-row items-center justify-center gap-x-2",
                "rounded-xl bg-muted px-4 min-w-[80px] overflow-hidden",
                "h-12",
                "opacity-50",
                "w-full",
                "bg-icon-default ",
              ],
              {
                "transform": [
                  {
                    "scale": 1,
                  },
                ],
              },
            ]
          }
          testID="manual-backup-step-continue-button"
        >
          <Text
            accessibilityRole="text"
            ellipsizeMode="clip"
            numberOfLines={1}
            style={
              [
                [
                  "text-body-md",
                  "font-default-medium",
                  "text-default",
                  "shrink grow-0 flex-wrap text-center  text-primary-inverse ",
                ],
                undefined,
              ]
            }
          >
            Continue
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View />
</View>
`;

exports[`ManualBackupStep1 theme appearance renders with dark theme 1`] = `
<View
  edges={
    {
      "bottom": "additive",
    }
  }
  style={
    [
      "bg-default flex-1",
    ]
  }
>
  <View
    style={
      [
        [
          "flex",
          undefined,
          undefined,
          false,
          undefined,
          undefined,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          undefined,
          undefined,
          "flex-1 px-4",
        ],
        undefined,
      ]
    }
  >
    <View
      style={
        [
          [
            "flex",
            undefined,
            undefined,
            false,
            undefined,
            undefined,
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            undefined,
            undefined,
            "flex-1 justify-between",
          ],
          undefined,
        ]
      }
    >
      <View
        style={
          [
            [
              "flex",
              undefined,
              undefined,
              false,
              undefined,
              undefined,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              undefined,
              undefined,
              "flex-1",
            ],
            undefined,
          ]
        }
      >
        <View
          style={
            [
              [
                "flex",
                undefined,
                undefined,
                false,
                undefined,
                undefined,
                false,
                false,
                false,
                false,
                false,
                false,
                false,
                false,
                false,
                false,
                false,
                false,
                false,
                false,
                false,
                undefined,
                undefined,
                "flex-1 flex-col gap-4",
              ],
              undefined,
            ]
          }
          testID="manual_backup_step_1-screen"
        >
          <Text
            accessibilityRole="text"
            style={
              [
                [
                  "text-display-md",
                  "font-default-bold",
                  "text-default",
                  undefined,
                ],
                undefined,
              ]
            }
          >
            Save your Secret Recovery Phrase
          </Text>
          <View
            style={
              [
                [
                  "flex",
                  undefined,
                  undefined,
                  false,
                  undefined,
                  "justify-start",
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  undefined,
                  undefined,
                  undefined,
                ],
                undefined,
              ]
            }
          >
            <Text
              accessibilityRole="text"
              style={
                [
                  [
                    "text-body-md",
                    "font-default-regular",
                    "text-alternative",
                    undefined,
                  ],
                  undefined,
                ]
              }
            >
              Your
               
              <Text
                accessibilityRole="text"
                onPress={[Function]}
                style={
                  [
                    [
                      "text-body-md",
                      "font-default-regular",
                      "text-primary-default",
                      undefined,
                    ],
                    undefined,
                  ]
                }
              >
                Secret Recovery Phrase
                 
              </Text>
              gives full wallet access.
               
              <Text
                accessibilityRole="text"
                style={
                  [
                    [
                      "text-body-md",
                      "font-default-medium",
                      "text-alternative",
                      undefined,
                    ],
                    undefined,
                  ]
                }
              >
                Write it down with the correct order and numbers. Keep it safe and never share it.
              </Text>
            </Text>
          </View>
          <View
            style={
              [
                [
                  "flex",
                  undefined,
                  undefined,
                  false,
                  undefined,
                  undefined,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  undefined,
                  undefined,
                  "bg-default rounded-lg flex-row border border-default min-h-[230px]",
                ],
                undefined,
              ]
            }
          >
            <View
              style={
                [
                  [
                    "flex",
                    undefined,
                    undefined,
                    false,
                    undefined,
                    undefined,
                    false,
                    false,
                    false,
                    false,
                    false,
                    false,
                    false,
                    false,
                    false,
                    false,
                    false,
                    false,
                    false,
                    false,
                    false,
                    undefined,
                    undefined,
                    "flex-1 rounded-lg",
                  ],
                  undefined,
                ]
              }
            >
              <TouchableOpacity
                onPress={[Function]}
                style={
                  [
                    "absolute top-0 left-0 bottom-0 right-0 h-full rounded-lg flex-1",
                  ]
                }
                testID="blur-button"
              >
                <View
                  accessibilityIgnoresInvertColors={true}
                  style={
                    [
                      "absolute top-0 left-0 bottom-0 right-0 h-full rounded-lg flex-1",
                      "opacity-50",
                    ]
                  }
                >
                  <Image
                    resizeMode="cover"
                    source={1}
                    style={
                      [
                        {
                          "bottom": 0,
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                        },
                        {
                          "height": undefined,
                          "width": undefined,
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
                <View
                  style={
                    [
                      [
                        "flex",
                        undefined,
                        undefined,
                        false,
                        undefined,
                        undefined,
                        false,
                        false,
                        false,
                        false,
                        false,
                        false,
                        false,
                        false,
                        false,
                        false,
                        false,
                        false,
                        false,
                        false,
                        false,
                        undefined,
                        undefined,
                        "items-center justify-center rounded-lg px-6 py-[45px] gap-y-4 h-full flex-1",
                      ],
                      undefined,
                    ]
                  }
                >
                  <SvgMock
                    fill="currentColor"
                    name="EyeSlash"
                    style={
                      [
                        [
                          "text-icon-default",
                          "w-8 h-8",
                          undefined,
                        ],
                        undefined,
                      ]
                    }
                  />
                  <Text
                    accessibilityRole="text"
                    style={
                      [
                        [
                          "text-body-md",
                          "font-default-medium",
                          "text-default",
                          undefined,
                        ],
                        undefined,
                      ]
                    }
                  >
                    Tap to reveal
                  </Text>
                  <Text
                    accessibilityRole="text"
                    style={
                      [
                        [
                          "text-body-sm",
                          "font-default-regular",
                          "text-default",
                          undefined,
                        ],
                        undefined,
                      ]
                    }
                  >
                    Make sure no one is watching your screen.
                  </Text>
                </View>
              </TouchableOpacity>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          [
            [
              "flex",
              undefined,
              undefined,
              false,
              undefined,
              undefined,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              undefined,
              undefined,
              "px-0 gap-4 flex justify-center items-center mb-0",
            ],
            undefined,
          ]
        }
      >
        <View
          accessibilityLabel="Continue"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              [
                "flex-row items-center justify-center gap-x-2",
                "rounded-xl bg-muted px-4 min-w-[80px] overflow-hidden",
                "h-12",
                "opacity-50",
                "w-full",
                "bg-icon-default ",
              ],
              {
                "transform": [
                  {
                    "scale": 1,
                  },
                ],
              },
            ]
          }
          testID="manual-backup-step-continue-button"
        >
          <Text
            accessibilityRole="text"
            ellipsizeMode="clip"
            numberOfLines={1}
            style={
              [
                [
                  "text-body-md",
                  "font-default-medium",
                  "text-default",
                  "shrink grow-0 flex-wrap text-center  text-primary-inverse ",
                ],
                undefined,
              ]
            }
          >
            Continue
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View />
</View>
`;

exports[`ManualBackupStep1 theme appearance renders with light theme on Android 1`] = `
<View
  edges={
    {
      "bottom": "additive",
    }
  }
  style={
    [
      "bg-default flex-1",
    ]
  }
>
  <View
    style={
      [
        [
          "flex",
          undefined,
          undefined,
          false,
          undefined,
          undefined,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          undefined,
          undefined,
          "flex-1 px-4",
        ],
        undefined,
      ]
    }
  >
    <View
      style={
        [
          [
            "flex",
            undefined,
            undefined,
            false,
            undefined,
            undefined,
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            undefined,
            undefined,
            "flex-1 justify-between",
          ],
          undefined,
        ]
      }
    >
      <View
        style={
          [
            [
              "flex",
              undefined,
              undefined,
              false,
              undefined,
              undefined,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              undefined,
              undefined,
              "flex-1",
            ],
            undefined,
          ]
        }
      >
        <View
          style={
            [
              [
                "flex",
                undefined,
                undefined,
                false,
                undefined,
                undefined,
                false,
                false,
                false,
                false,
                false,
                false,
                false,
                false,
                false,
                false,
                false,
                false,
                false,
                false,
                false,
                undefined,
                undefined,
                "flex-1 flex-col gap-4",
              ],
              undefined,
            ]
          }
          testID="manual_backup_step_1-screen"
        >
          <Text
            accessibilityRole="text"
            style={
              [
                [
                  "text-display-md",
                  "font-default-bold",
                  "text-default",
                  undefined,
                ],
                undefined,
              ]
            }
          >
            Save your Secret Recovery Phrase
          </Text>
          <View
            style={
              [
                [
                  "flex",
                  undefined,
                  undefined,
                  false,
                  undefined,
                  "justify-start",
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  undefined,
                  undefined,
                  undefined,
                ],
                undefined,
              ]
            }
          >
            <Text
              accessibilityRole="text"
              style={
                [
                  [
                    "text-body-md",
                    "font-default-regular",
                    "text-alternative",
                    undefined,
                  ],
                  undefined,
                ]
              }
            >
              Your
               
              <Text
                accessibilityRole="text"
                onPress={[Function]}
                style={
                  [
                    [
                      "text-body-md",
                      "font-default-regular",
                      "text-primary-default",
                      undefined,
                    ],
                    undefined,
                  ]
                }
              >
                Secret Recovery Phrase
                 
              </Text>
              gives full wallet access.
               
              <Text
                accessibilityRole="text"
                style={
                  [
                    [
                      "text-body-md",
                      "font-default-medium",
                      "text-alternative",
                      undefined,
                    ],
                    undefined,
                  ]
                }
              >
                Write it down with the correct order and numbers. Keep it safe and never share it.
              </Text>
            </Text>
          </View>
          <View
            style={
              [
                [
                  "flex",
                  undefined,
                  undefined,
                  false,
                  undefined,
                  undefined,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  undefined,
                  undefined,
                  "bg-default rounded-lg flex-row border border-default min-h-[230px]",
                ],
                undefined,
              ]
            }
          >
            <View
              style={
                [
                  [
                    "flex",
                    undefined,
                    undefined,
                    false,
                    undefined,
                    undefined,
                    false,
                    false,
                    false,
                    false,
                    false,
                    false,
                    false,
                    false,
                    false,
                    false,
                    false,
                    false,
                    false,
                    false,
                    false,
                    undefined,
                    undefined,
                    "flex-1 rounded-lg",
                  ],
                  undefined,
                ]
              }
            >
              <TouchableOpacity
                onPress={[Function]}
                style={
                  [
                    "absolute top-0 left-0 bottom-0 right-0 h-full rounded-lg flex-1",
                  ]
                }
                testID="blur-button"
              >
                <View
                  accessibilityIgnoresInvertColors={true}
                  style={
                    [
                      "absolute top-0 left-0 bottom-0 right-0 h-full rounded-lg flex-1",
                      "opacity-50",
                    ]
                  }
                >
                  <Image
                    resizeMode="cover"
                    source={1}
                    style={
                      [
                        {
                          "bottom": 0,
                          "left": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                        },
                        {
                          "height": undefined,
                          "width": undefined,
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
                <View
                  style={
                    [
                      [
                        "flex",
                        undefined,
                        undefined,
                        false,
                        undefined,
                        undefined,
                        false,
                        false,
                        false,
                        false,
                        false,
                        false,
                        false,
                        false,
                        false,
                        false,
                        false,
                        false,
                        false,
                        false,
                        false,
                        undefined,
                        undefined,
                        "items-center justify-center rounded-lg px-6 py-[45px] gap-y-4 h-full flex-1",
                      ],
                      undefined,
                    ]
                  }
                >
                  <SvgMock
                    fill="currentColor"
                    name="EyeSlash"
                    style={
                      [
                        [
                          "text-icon-default",
                          "w-8 h-8",
                          undefined,
                        ],
                        undefined,
                      ]
                    }
                  />
                  <Text
                    accessibilityRole="text"
                    style={
                      [
                        [
                          "text-body-md",
                          "font-default-medium",
                          "text-default",
                          undefined,
                        ],
                        undefined,
                      ]
                    }
                  >
                    Tap to reveal
                  </Text>
                  <Text
                    accessibilityRole="text"
                    style={
                      [
                        [
                          "text-body-sm",
                          "font-default-regular",
                          "text-default",
                          undefined,
                        ],
                        undefined,
                      ]
                    }
                  >
                    Make sure no one is watching your screen.
                  </Text>
                </View>
              </TouchableOpacity>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          [
            [
              "flex",
              undefined,
              undefined,
              false,
              undefined,
              undefined,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              undefined,
              undefined,
              "px-0 gap-4 flex justify-center items-center mb-4",
            ],
            undefined,
          ]
        }
      >
        <View
          accessibilityLabel="Continue"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              [
                "flex-row items-center justify-center gap-x-2",
                "rounded-xl bg-muted px-4 min-w-[80px] overflow-hidden",
                "h-12",
                "opacity-50",
                "w-full",
                "bg-icon-default ",
              ],
              {
                "transform": [
                  {
                    "scale": 1,
                  },
                ],
              },
            ]
          }
          testID="manual-backup-step-continue-button"
        >
          <Text
            accessibilityRole="text"
            ellipsizeMode="clip"
            numberOfLines={1}
            style={
              [
                [
                  "text-body-md",
                  "font-default-medium",
                  "text-default",
                  "shrink grow-0 flex-wrap text-center  text-primary-inverse ",
                ],
                undefined,
              ]
            }
          >
            Continue
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View />
</View>
`;
